@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2008/07/14 12:56:00 joerg Exp $
+# $NetBSD: Makefile,v 1.4 2010/12/07 01:37:17 reed Exp $
 
-DISTNAME=	ipa_sdb-1.0.1
-PKGREVISION=	1
+DISTNAME=	ipa_sdb-1.0.2
 CATEGORIES=	databases
-MASTER_SITES=	http://ipa-system.sourceforge.net/modules/ipa_sdb/
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ipa-system/modules/ipa_sdb/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	simon@comsys.ntu-kpi.kiev.ua
